fix: alignment on products page

--- a/site/components/Products/Products.module.less
+++ b/site/components/Products/Products.module.less
@@ -55,8 +55,6 @@
   }
   .slicerbarh5 {
     margin-top: 1002px;
-    width: 108%;
-    left: -8%;
   }
   .slicerbarh6 {
     margin-top: 1780px;
@@ -127,12 +125,12 @@
       }
       .slicerbarv {
         width: 1px;
-        height: 100%;
+        height: 97%;
         margin-left: 4.06%;
       }
       .slicerbarv2 {
         margin-left: 49.9%;
-        height: 100%;
+        // height: 100%;
       }
       .slicerbarv3 {
         margin-left: 96%;
@@ -271,6 +269,10 @@
             }
           }
         }
+
+        .slicerbarv {
+          height: 100%;
+        }
       }
     }
   }
@@ -315,9 +317,7 @@
     }
     .slicerbarh5 {
       width: 100%;
-      left: 0;
       margin-top: 1110px;
-      width: 100%;
       left: 4%;
     }
     .slicerbarh6 {
